--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,8 +103,8 @@ body {
     max-width: 550px;
     margin-right: 100px;
     opacity: 0;
-    animation: ZoomIn 1s ease forwards;
-    animation-delay: 2s;
+    animation: ZoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
+    animation-delay: 2s, 3s;
 }
 
 .social a {
@@ -210,5 +210,19 @@ body {
     100% {
         transform: scale(1);
         opacity: 1;
+    }
+}
+
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-45px);
+    }
+
+    100% {
+        transform: translateY(0);
     }
 }
