Подключение к БД (напиши мне)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,47 @@
+/* Общие стили */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
 
-body {
-    background: #1f242d;
-    color: #fff;
+:root {
+    --bg-color: #1f242d;
+    --second-bg-color: #323946;
+    --text-color: #fff;
+    --main-color: #0ef;
 }
 
+html {
+    font-size: 62.5%;
+    overflow: hidden;
+}
+
+body {
+    background: var(--bg-color);
+    color: var(--text-color);
+}
+
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+
+/* Навигация */
 .header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 10%;
-    background: transparent;
+    padding: 2rem 9%;
+    background: var(--bg-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,9 +49,8 @@ body {
 }
 
 .logo {
-    font-size: 25px;
-    color: #fff;
-    text-decoration: none;
+    font-size: 2.5rem;
+    color: var(--text-color);
     font-weight: 600;
     cursor: default;
     opacity: 0;
@@ -35,11 +58,9 @@ body {
 }
 
 .navbar a {
-    font-size: 18px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-    margin-left: 35px;
+    font-size: 1.7rem;
+    color: var(--text-color);
+    margin-left: 4rem;
     transition: .3s;
     opacity: 0;
     animation: sliderTop 5s ease forwards;
@@ -48,25 +69,35 @@ body {
 
 .navbar a:hover,
 .navbar a.active {
-    color:#0ef;
+    color: var(--main-color);
 }
 
+#menu-icon {
+    font-size: 3.6rem;
+    color: var(--text-color);
+    display: none;
+}
+
+/* Главная страница */
 .home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 70px 10% 0;
 }
 
-.home-content {
-    max-width: 600px;
+.home-img img {
+    width: 35vw;
+    margin-right: 100px;
+    opacity: 0;
+    animation: ZoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
+    animation-delay: 2s, 3s;
 }
 
 .home-content h3 {
-    font-size: 32px;
+    font-size: 3.2rem;
     font-weight: 700;
     opacity: 0;
     animation: sliderBottom 1s ease forwards;
@@ -74,81 +105,72 @@ body {
 }
 
 .home-content h3:nth-of-type(2) {
-    margin-bottom: 30px;
+    margin-bottom: 2rem;
     animation: sliderTop 1s ease forwards;
     animation-delay: .7s;
 }
 
-.home-content h3 span {
-    color:#0ef;
+span {
+    color: var(--main-color);
 }
 
 .home-content h1 {
-    font-size: 56px;
+    font-size: 5.6rem;
     font-weight: 700;
-    margin: -3px 0;
+    line-height: 1.3;
     opacity: 0;
     animation: sliderLeft 1s ease forwards;
     animation-delay: 1s;
 }
 
 .home-content p {
-    font-size: 16px;
+    font-size: 1.6rem;
     opacity: 0;
     animation: sliderRight 1s ease forwards;
     animation-delay: 1s;
 }
 
-.home-img img {
-    max-width: 550px;
-    margin-right: 100px;
-    opacity: 0;
-    animation: ZoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
-    animation-delay: 2s, 3s;
-}
-
-.social a {
+.socialmedia a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
     background: transparent;
-    border: 2px solid #0ef;
+    border: .2rem solid var(--main-color);
     border-radius: 50%;
-    font-size: 20px;
-    color: #0ef;
-    text-decoration: none;
-    margin: 30px 15px 30px 0;
+    font-size: 2rem;
+    color: var(--main-color);
+    margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
     opacity: 0;
     animation: sliderLeft 1s ease forwards;
     animation-delay: calc(.2s * var(--i));
 }
 
-.social a:hover {
-    background: #0ef;
-    color: #1f242d;
-    box-shadow: 0 0 20px #0ef;
+.socialmedia a:hover {
+    background: var(--main-color);
+    color: var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color);
 }
 
 .btn {
     display: inline-block;
-    padding: 12px 28px;
-    background: #0ef;
-    border-radius: 40px;
-    box-shadow: 0 0 10px #0ef;
-    font-size: 16px;
-    color: #1f242d;
-    letter-spacing: 1px;
-    text-decoration: none;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
     font-weight: 600;
+    transition: .5s ease;
     opacity: 0;
     animation: sliderTop 1s ease forwards;
-    animation-delay: 2s;
+    animation-delay: 1s;
 }
 
-/* Анимация LOGO */
+/* Главная страница: анимация */
 @keyframes sliderRight {
     0% {
         transform: translateX(-100px);
@@ -159,7 +181,6 @@ body {
         transform: translateX(0);
         opacity: 1;
     }
-
 }
 
 @keyframes sliderTop {
@@ -172,7 +193,6 @@ body {
         transform: translateY(0);
         opacity: 1;
     }
-
 }
 
 @keyframes sliderBottom {
@@ -185,7 +205,6 @@ body {
         transform: translateY(0);
         opacity: 1;
     }
-
 }
 
 @keyframes sliderLeft {
@@ -198,7 +217,6 @@ body {
         transform: translateX(0);
         opacity: 1;
     }
-
 }
 
 @keyframes ZoomIn {
@@ -225,4 +243,83 @@ body {
     100% {
         transform: translateY(0);
     }
+}
+
+/* Раздел контакты */
+.contact {
+    margin-bottom: 3rem;
+}
+
+.contact form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contact form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea {
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+
+::placeholder{
+    color: var(--text-color);
+}
+
+.contact form .input-box input {
+    width: 49%;
+}
+
+.contact form .input-box input {
+    resize: none;
+}
+
+.contact form .btn {
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+/* Раздел Обо мне */
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--second-bg-color);
+}
+
+.about-img {
+    width: 35vw;
+}
+
+.heading {
+    text-align: center;
+    font-size: 4.5rem;
+}
+
+.about-content h2 {
+    text-align: left;
+    line-height: 1.2;
+}
+
+.about-content h3 {
+    font-size: 2.6rem;
+}
+
+.about-content p {
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
 }
