--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
 /* Общие стили */
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins:wght@100&family=Roboto:wght@100&display=swap');
+
 
 * {
     margin: 0;
@@ -8,8 +10,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -21,7 +22,7 @@
 
 html {
     font-size: 62.5%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 body {
@@ -53,6 +54,7 @@ section {
     color: var(--text-color);
     font-weight: 600;
     cursor: default;
+
     opacity: 0;
     animation: sliderRight 1s ease forwards;
 }
@@ -62,6 +64,7 @@ section {
     color: var(--text-color);
     margin-left: 4rem;
     transition: .3s;
+    
     opacity: 0;
     animation: sliderTop 5s ease forwards;
     animation-delay: calc(.2s * var(--i));
@@ -91,6 +94,7 @@ section {
 .home-img img {
     width: 35vw;
     margin-right: 100px;
+
     opacity: 0;
     animation: ZoomIn 1s ease forwards, floatImage 4s ease-in-out infinite;
     animation-delay: 2s, 3s;
@@ -99,6 +103,7 @@ section {
 .home-content h3 {
     font-size: 3.2rem;
     font-weight: 700;
+
     opacity: 0;
     animation: sliderBottom 1s ease forwards;
     animation-delay: .7s;
@@ -106,6 +111,7 @@ section {
 
 .home-content h3:nth-of-type(2) {
     margin-bottom: 2rem;
+
     animation: sliderTop 1s ease forwards;
     animation-delay: .7s;
 }
@@ -118,6 +124,7 @@ span {
     font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
+
     opacity: 0;
     animation: sliderLeft 1s ease forwards;
     animation-delay: 1s;
@@ -125,6 +132,7 @@ span {
 
 .home-content p {
     font-size: 1.6rem;
+
     opacity: 0;
     animation: sliderRight 1s ease forwards;
     animation-delay: 1s;
@@ -143,6 +151,7 @@ span {
     color: var(--main-color);
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
+
     opacity: 0;
     animation: sliderLeft 1s ease forwards;
     animation-delay: calc(.2s * var(--i));
@@ -165,9 +174,14 @@ span {
     letter-spacing: .1rem;
     font-weight: 600;
     transition: .5s ease;
+    
     opacity: 0;
     animation: sliderTop 1s ease forwards;
     animation-delay: 1s;
+}
+
+.btn:hover {
+    box-shadow: none;
 }
 
 /* Главная страница: анимация */
@@ -246,7 +260,7 @@ span {
 }
 
 /* Раздел контакты */
-.contact {
+.contact h2 {
     margin-bottom: 3rem;
 }
 
@@ -282,7 +296,7 @@ span {
     width: 49%;
 }
 
-.contact form .input-box input {
+.contact form textarea {
     resize: none;
 }
 
@@ -372,6 +386,7 @@ span {
     }
 }
 
+/* Подвал */
 
 .footer {
     display: flex;
@@ -406,3 +421,125 @@ span {
 }
 
 
+/* Раздел "Services" */
+
+.services h2 {
+    margin-bottom: 5rem;
+}
+
+.services-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.services-container .services-box {
+    flex: 1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+    transition: .5s ease;
+}
+
+.services-container .services-box:hover {
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+
+.services-box i {
+    font-size: 7rem;
+    color: var(--main-color);
+}
+
+.services-box h3 {
+    font-size: 2.6rem;
+}
+
+.services-box p {
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
+
+
+/* Раздел Portfolio */
+
+.portfolio {
+    background: var(--second-bg-color);
+}
+
+.portfolio h2 {
+    margin-bottom: 4rem;
+}
+
+.portfolio-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.portfolio-container .portfolio-box {
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+}
+
+.portfolio-box img {
+    width: 100%;
+    transition: .5s ease;
+}
+
+.portfolio-box:hover img {
+    transform: scale(1.1);
+}
+
+.portfolio-box .portfolio-layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 1), var(--main-color));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+    transform: translateY(100%);
+    transition: .5s ease;
+}
+
+.portfolio-box:hover .portfolio-layer {
+    transform: translateY(0);
+}
+
+.portfolio-layer h4 {
+    font-size: 3rem;
+}
+
+.portfolio-layer p {
+    font-size: 1.6rem;
+    margin: .3rem 0 1rem;
+}
+
+.portfolio-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
+    border-radius: 50%;
+}
+
+.portfolio-layer a i {
+    font-size: 2rem;
+    color: var(--second-bg-color);
+}
