--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 /* Общие стили */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins:wght@100&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
 
 
 * {
@@ -10,7 +10,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Serif', serif;
 }
 
 :root {
@@ -257,7 +257,7 @@ span {
     100% {
         transform: translateY(0);
     }
-} 
+}
 
 /* Раздел контакты */
 .contact h2 {
@@ -661,4 +661,37 @@ span {
     .portfolio-container {
         grid-template-columns: repeat(1, 1fr);
     }
+}
+
+
+/* Видео блок */
+
+.video {
+    padding: 7rem;
+}
+
+.video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 1rem;
+}
+
+.video-box {
+    flex: 1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 2rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+}
+
+.video-box p {
+    font-size: 2rem;
+}
+
+.video-container iframe {
+    height: 300px;
+    width: 500px;
 }
