--- a/public/css/style.css
+++ b/public/css/style.css
@@ -747,153 +747,175 @@ span {
 
 /* Раздел Резюме */
 
-.resume_wrapper{
-	display: flex;
-	width: 800px;
-	margin: 64px auto;
+.resume_wrapper {
+    display: flex;
+    width: 800px;
+    margin: 64px auto;
     background: var(--second-bg-color);
-	padding: 10px;
+    padding: 10px;
 }
 
-.resume_wrapper .resume_left{
-	width: 35%;
-	background:var(--bg-color);
+.resume_wrapper .resume_left {
+    width: 35%;
+    background: var(--bg-color);
 }
 
-.resume_wrapper .resume_left .resume_image{
-	width: 100%;
+.resume_wrapper .resume_left .resume_image {
+    width: 100%;
 }
 
-.resume_wrapper .resume_left .resume_image img{
-	width: 100%;
-	display: block;
+.resume_wrapper .resume_left .resume_image img {
+    width: 100%;
+    display: block;
 
 }
 
-.resume_wrapper .resume_title{
-	color: #fff;
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 16px;
-	margin-bottom: 10px;
-	letter-spacing: 4px;
+.resume_wrapper .resume_title {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 10px;
+    letter-spacing: 4px;
 }
 
-.resume_wrapper .resume_left .resume_info{
-	color: var(--text-color);
+.localization {
+    float: right;
 }
 
-.resume_wrapper .resume_left .resume_bottom{
-	padding: 20px 30px;
+.localization a {
+    color: var(--text-color);
+    transition: .3s;
 }
 
-.resume_wrapper .resume_item{
-	padding: 20px 0;
-	border-bottom: 1px solid #0175b2;
+
+.localization  a:hover,
+.localization  a.active {
+    color: var(--main-color);
 }
 
-.resume_wrapper  .resume_item:last-child{
-	border-bottom: 0;
+.resume_title_localization {
+    display: flex;
+    justify-content: space-between;
+
 }
 
-.resume_wrapper .resume_left .resume_namerole{
-	display: none;
+.resume_wrapper .resume_left .resume_info {
+    color: var(--text-color);
 }
 
-.resume_wrapper .resume_namerole .name{
-	font-size: 20px;
-	color: #fff;
-	text-transform: uppercase;
-	font-weight: 700;
-	margin-bottom: 5px;
-	letter-spacing: 4px;
+.resume_wrapper .resume_left .resume_bottom {
+    padding: 20px 30px;
 }
 
-.resume_wrapper .resume_left .resume_namerole .role{
-	color: #84838b;
+.resume_wrapper .resume_item {
+    padding: 20px 0;
+    border-bottom: 1px solid #0175b2;
 }
 
-.resume_wrapper .resume_left .resume_contact .resume_info:last-child{
-	 margin-top: 10px;
+.resume_wrapper .resume_item:last-child {
+    border-bottom: 0;
 }
 
-.resume_wrapper .resume_left .resume_contact .resume_subtitle{
-	color:var(--text-color);
-	margin-bottom: 2px;
+.resume_wrapper .resume_left .resume_namerole {
+    display: none;
 }
 
-.resume_wrapper .resume_left .resume_skills .skills_list{
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 5px;
+.resume_wrapper .resume_namerole .name {
+    font-size: 20px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 5px;
+    letter-spacing: 4px;
 }
 
-.resume_wrapper .resume_left .resume_skills .skills_list .skills_bar p{
-	position: relative;
-	width: 125px;
+.resume_wrapper .resume_left .resume_namerole .role {
+    color: #84838b;
+}
+
+.resume_wrapper .resume_left .resume_contact .resume_info:last-child {
+    margin-top: 10px;
+}
+
+.resume_wrapper .resume_left .resume_contact .resume_subtitle {
+    color: var(--text-color);
+    margin-bottom: 2px;
+}
+
+.resume_wrapper .resume_left .resume_skills .skills_list {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.resume_wrapper .resume_left .resume_skills .skills_list .skills_bar p {
+    position: relative;
+    width: 125px;
     height: 20px;
     background: #fff;
 }
 
-.resume_wrapper .resume_left .resume_skills .skills_list .skills_bar p span{	
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: #0175b2;
-	width: 100%;
-	height: 100%;
+.resume_wrapper .resume_left .resume_skills .skills_list .skills_bar p span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #0175b2;
+    width: 100%;
+    height: 100%;
 }
 
-.resume_wrapper .resume_right{
-	width: 65%;
-	padding: 20px 40px;
-	color:var(--text-color);
+.resume_wrapper .resume_right {
+    width: 65%;
+    padding: 20px 40px;
+    color: var(--text-color);
 }
 
-.resume_wrapper .resume_right .resume_namerole .name{
-	color: color:var(--text-color);;
-	font-size: 32px;
+.resume_wrapper .resume_right .resume_namerole .name {
+    color: color:var(--text-color);
+    ;
+    font-size: 32px;
 }
 
-.resume_wrapper .resume_right .resume_namerole .role{
-	font-size: 14px;
-	text-transform: uppercase;
+.resume_wrapper .resume_right .resume_namerole .role {
+    font-size: 14px;
+    text-transform: uppercase;
 }
 
-.resume_wrapper .resume_right .resume_item .resume_title{
-	color:var(--text-color);
+.resume_wrapper .resume_right .resume_item .resume_title {
+    color: var(--text-color);
 }
 
-.resume_wrapper .resume_right .resume_data{
-	display: flex;
+.resume_wrapper .resume_right .resume_data {
+    display: flex;
 }
 
-.resume_wrapper .resume_right .resume_data .year{
-	padding-right: 35px;
-	width: 115px;
-	position: relative;
+.resume_wrapper .resume_right .resume_data .year {
+    padding-right: 35px;
+    width: 115px;
+    position: relative;
 }
 
-.resume_wrapper .resume_right .resume_data .resume_content{
-	padding-left: 35px;
-	margin-bottom: 20px;
-	width: calc(100% - 115px);
+.resume_wrapper .resume_right .resume_data .resume_content {
+    padding-left: 35px;
+    margin-bottom: 20px;
+    width: calc(100% - 115px);
 }
 
-.resume_wrapper .resume_right .resume_data .year:before{
-	content: "";
-	position: absolute;
-	top: 5px;
-	right: 0;
-	width: 10px;
-	height: 10px;
-	background: #fff;
-	border: 1px solid #26252d;
-	border-radius: 50%;
+.resume_wrapper .resume_right .resume_data .year:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    right: 0;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border: 1px solid #26252d;
+    border-radius: 50%;
 }
 
-.resume_wrapper .resume_right .resume_data .year:after{
-	content: "";
+.resume_wrapper .resume_right .resume_data .year:after {
+    content: "";
     position: absolute;
     top: 17px;
     right: 4px;
@@ -902,63 +924,71 @@ span {
     background: #0175b2;
 }
 
-.resume_wrapper .resume_right .resume_data:last-child .year:after{
-	display: none;
+.resume_wrapper .resume_right .resume_data:last-child .year:after {
+    display: none;
 }
 
-.resume_wrapper .resume_right .resume_interests .resume_info{
-	display: flex;
-	justify-content: space-between;
-	text-align: center;
+.resume_wrapper .resume_right .resume_interests .resume_info {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
 }
 
-.resume_wrapper .resume_right .resume_interests .interests .int_icon{
-	font-size: 38px;
-	color: #0175b2;
-	margin-bottom: 10px;
+.resume_wrapper .resume_right .resume_interests .interests .int_icon {
+    font-size: 38px;
+    color: #0175b2;
+    margin-bottom: 10px;
 }
 
 
-@media screen and (max-width: 800px){
-	.resume_wrapper .resume_right .resume_namerole{
-		display: none;
-	}
-	.resume_wrapper .resume_left .resume_namerole{
-		display: block;
-	}
-	.resume_wrapper{
-		width: 95%;
-		margin: 51px auto;
-		flex-direction: column;
-	}
-	.resume_wrapper .resume_left,
-	.resume_wrapper .resume_right{
-		width: 100%;
-	}
+@media screen and (max-width: 800px) {
+    .resume_wrapper .resume_right .resume_namerole {
+        display: none;
+    }
+
+    .resume_wrapper .resume_left .resume_namerole {
+        display: block;
+    }
+
+    .resume_wrapper {
+        width: 95%;
+        margin: 51px auto;
+        flex-direction: column;
+    }
+
+    .resume_wrapper .resume_left,
+    .resume_wrapper .resume_right {
+        width: 100%;
+    }
 }
 
-@media screen and (max-width: 424px){
-	.resume_wrapper .resume_right{
-		padding: 20px 30px;
-	}
-	.resume_wrapper .resume_right .resume_data{
-		flex-direction: column;
-	}
-	.resume_wrapper .resume_right .resume_data .year{
-		padding: 0;
-		margin-bottom: 5px;
-		width: 100%;
-		color: #0175b2;
-	}
-	.resume_wrapper .resume_right .resume_data .year:before,
-	.resume_wrapper .resume_right .resume_data .year:after{
-		display: none;
-	}
-	.resume_wrapper .resume_right .resume_data .resume_content{
-		width: 100%;
-		padding: 0;
-	}
-	.resume_wrapper .resume_right .resume_interests .interests .int_icon{
-		font-size: 24px;
-	}
+@media screen and (max-width: 424px) {
+    .resume_wrapper .resume_right {
+        padding: 20px 30px;
+    }
+
+    .resume_wrapper .resume_right .resume_data {
+        flex-direction: column;
+    }
+
+    .resume_wrapper .resume_right .resume_data .year {
+        padding: 0;
+        margin-bottom: 5px;
+        width: 100%;
+        color: #0175b2;
+    }
+
+    .resume_wrapper .resume_right .resume_data .year:before,
+    .resume_wrapper .resume_right .resume_data .year:after {
+        display: none;
+    }
+
+    .resume_wrapper .resume_right .resume_data .resume_content {
+        width: 100%;
+        padding: 0;
+    }
+
+    .resume_wrapper .resume_right .resume_interests .interests .int_icon {
+        font-size: 24px;
+    }
 }
