--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1000,7 +1000,7 @@ span {
     width: 200px; /* Ширина подсказки */
     left: 0; top: 0; /* Положение подсказки */
     background: #3989c9; /* Синий цвет фона */
-    color: #fff; /* Цвет текста */
+    color: var(--text-color); /* Цвет текста */
     padding: 0.5em; /* Поля вокруг текста */
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Параметры тени */
     pointer-events: none; /* Подсказка */
