--- a/public/css/style.css
+++ b/public/css/style.css
@@ -599,6 +599,9 @@ span {
     box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
+    width: 430px;
+    height: 300px;
+
 }
 
 .portfolio-box img {
