--- a/public/css/style.css
+++ b/public/css/style.css
@@ -367,7 +367,7 @@ span {
         padding: 10rem 3% 2rem;
     }
 
-    .services {
+    .projects {
         padding: 7rem;
     }
 
@@ -441,7 +441,7 @@ span {
         margin-top: 4rem;
     }
 
-    .services h2 {
+    .projects h2 {
         margin-bottom: 3rem;
     }
 
@@ -532,13 +532,13 @@ span {
 }
 
 
-/* Раздел "Services" */
+/* Раздел "Проекты" */
 
-.services h2 {
+.projects h2 {
     margin-bottom: 5rem;
 }
 
-.services-container {
+.projects-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -546,7 +546,7 @@ span {
     gap: 2rem;
 }
 
-.services-container .services-box {
+.projects-container .projects-box {
     flex: 1 1 30rem;
     background: var(--second-bg-color);
     padding: 3rem 2rem 4rem;
@@ -556,21 +556,21 @@ span {
     transition: .5s ease;
 }
 
-.services-container .services-box:hover {
+.projects-container .projects-box:hover {
     border-color: var(--main-color);
     transform: scale(1.02);
 }
 
-.services-box i {
+.projects-box i {
     font-size: 7rem;
     color: var(--main-color);
 }
 
-.services-box h3 {
+.projects-box h3 {
     font-size: 2.6rem;
 }
 
-.services-box p {
+.projects-box p {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
 }
@@ -1058,7 +1058,7 @@ span {
     background: rgb(119, 136, 153);
 }
 
-.white .services-box {
+.white .projects-box {
     background: rgb(128, 128, 128);
 }
 
