--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,7 @@ section {
     min-height: 100vh;
     padding: 10rem 9% 2rem;
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Раздел "Навигация" */
@@ -268,6 +269,7 @@ span {
         transform: translateY(0);
     }
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Раздел "Контакты" */
@@ -303,9 +305,6 @@ span {
     color: var(--text-color);
 }
 
-.contact form .input-box input {
-    width: 49%;
-}
 
 .contact form textarea {
     resize: none;
@@ -315,6 +314,29 @@ span {
     margin-top: 2rem;
     cursor: pointer;
 }
+
+.error {
+    float: left;
+    color: red;
+}
+
+.counter-box {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+
+.counter-text {
+    position: absolute;
+    right: 10px;
+    bottom: 5px;
+}
+
 /* //////////////////////////////////////////////////////// */
 
 /* Раздел Обо мне */
@@ -353,6 +375,7 @@ span {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Подвал */
@@ -388,6 +411,7 @@ span {
     font-size: 2.4rem;
     color: var(--second-bg-color);
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Раздел "Проекты" */
@@ -432,6 +456,7 @@ span {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Раздел Портфолио */
@@ -514,6 +539,7 @@ span {
     font-size: 2rem;
     color: var(--second-bg-color);
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Раздел "Видео"*/
@@ -548,6 +574,7 @@ span {
 .video-box p {
     font-size: 1.7rem;
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Профиль*/
@@ -591,6 +618,7 @@ span {
 .clearfix {
     clear: both;
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Раздел Резюме */
@@ -786,6 +814,7 @@ span {
     color: #0175b2;
     margin-bottom: 10px;
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Всплывающая подсказка */
@@ -813,6 +842,7 @@ span {
     opacity: 1;
     top: 2em;
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* День и ночь */
@@ -836,11 +866,6 @@ span {
     background: rgb(128, 128, 128);
 }
 
-.white .contact form .input-box input,
-.white .contact form textarea {
-    background: rgb(128, 128, 128);
-}
-
 .white .resume_wrapper .resume_left {
     background: rgb(128, 128, 128);
 }
@@ -852,6 +877,7 @@ span {
 .white .projects-box {
     background: rgb(128, 128, 128);
 }
+
 /* //////////////////////////////////////////////////////// */
 
 /* Пагинация */
@@ -882,4 +908,5 @@ span {
 .pagination a:hover:not(.active) {
     background-color: var(--main-color);
 }
+
 /* //////////////////////////////////////////////////////// */
