--- a/public/css/style.css
+++ b/public/css/style.css
@@ -676,7 +676,7 @@ span {
 
 }
 
-.resume_wrapper .resume_left .resume_info {
+.resume_wrapper .resume_left .resume_info a {
     color: var(--text-color);
 }
 
